// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion Component renders empty given no sections 1`] = `<div />`;

exports[`Accordion Component renders the first tab by default 1`] = `
<div>
  <li>
    <button
      onClick={[Function]}
    >
      Section 1
    </button>
    <div
      className="content"
      style={
        Object {
          "display": "block",
        }
      }
    >
      Lorem ipsum dolor sit amet consectetur adipisicing elit.
    </div>
  </li>
  <li>
    <button
      onClick={[Function]}
    >
      Section 2
    </button>
    <div
      className="content"
      style={
        Object {
          "display": "none",
        }
      }
    >
      Cupiditate tenetur aliquam necessitatibus id distinctio quas nihil ipsam nisi modi!
    </div>
  </li>
  <li>
    <button
      onClick={[Function]}
    >
      Section 3
    </button>
    <div
      className="content"
      style={
        Object {
          "display": "none",
        }
      }
    >
      Animi amet cumque sint cupiditate officia ab voluptatibus libero optio et?
    </div>
  </li>
</div>
`;

exports[`Accordion Component renders the first tab by default 2`] = `
<div>
  <li>
    <button
      key="0"
      onClick={[Function]}
    >
      Section 1
    </button>
    <div
      className="content"
      style={
        Object {
          "display": "block",
        }
      }
    >
      Lorem ipsum dolor sit amet consectetur adipisicing elit.
    </div>
  </li>
  <li>
    <button
      key="1"
      onClick={[Function]}
    >
      Section 2
    </button>
    <div
      className="content"
      style={
        Object {
          "display": "none",
        }
      }
    >
      Cupiditate tenetur aliquam necessitatibus id distinctio quas nihil ipsam nisi modi!
    </div>
  </li>
  <li>
    <button
      key="2"
      onClick={[Function]}
    >
      Section 3
    </button>
    <div
      className="content"
      style={
        Object {
          "display": "none",
        }
      }
    >
      Animi amet cumque sint cupiditate officia ab voluptatibus libero optio et?
    </div>
  </li>
</div>
`;
